# papra-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish-container.yml
src/: config.py  enrichment.py  main.py  ollama.py  papra.py  pdfs.py  webhooks.py
src/prompts/: analysis.tmpl
tests/: test_config.py  test_main.py  test_ollama.py
