[project]
name = "papra-ai"
version = "0.1.0"
description = "Papra webhook service that enriches documents with Ollama vision models"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
